{
  "version": 4,
  "terraform_version": "1.0.9",
  "serial": 61,
  "lineage": "2bd3aa02-8edd-68e2-d053-3bbd72dbbc65",
  "resources": [
    {
      "module": "module.db-server-1[0]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03c53cb2507dda8ae",
            "arn": "arn:aws:ec2:us-east-1:727940474452:instance/i-0346132bd02e8f1d2",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0346132bd02e8f1d2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "galsekey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0afd6cfb9d1719f02",
            "private_dns": "ip-10-0-10-197.ec2.internal",
            "private_ip": "10.0.10.197",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02291cc656dc60009",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0caf5e3781013ec2b",
            "tags": {
              "Name": "DB",
              "Owner": "Gal Segal",
              "Purpose": "db server",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "DB",
              "Owner": "Gal Segal",
              "Purpose": "db server",
              "Terraform": "true"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09d3d3599d3477d8a"
            ]
          },
          "dependencies": [
            "data.aws_ami.aws-linux",
            "module.nginx-sg.aws_security_group.security_group",
            "module.private_subnet_1.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.db-server-2[0]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03c53cb2507dda8ae",
            "arn": "arn:aws:ec2:us-east-1:727940474452:instance/i-08748453e691b0bf9",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08748453e691b0bf9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "galsekey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0911195572abf8182",
            "private_dns": "ip-10-0-11-10.ec2.internal",
            "private_ip": "10.0.11.10",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f34c2074dc0b42af",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05a03f49db4ca2222",
            "tags": {
              "Name": "DB",
              "Owner": "Gal Segal",
              "Purpose": "DB server",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "DB",
              "Owner": "Gal Segal",
              "Purpose": "DB server",
              "Terraform": "true"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09d3d3599d3477d8a"
            ]
          },
          "dependencies": [
            "data.aws_ami.aws-linux",
            "module.nginx-sg.aws_security_group.security_group",
            "module.private_subnet_2.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.eip",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-093d885075644f41c",
            "domain": "vpc",
            "id": "eipalloc-05ba7a0924f7c6975",
            "network_border_group": "us-east-1",
            "network_interface": "eni-091d2b6447796c228",
            "private_dns": "ip-10-0-0-70.ec2.internal",
            "private_ip": "10.0.0.70",
            "public_dns": "ec2-23-21-232-182.compute-1.amazonaws.com",
            "public_ip": "23.21.232.182",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.igw",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:727940474452:internet-gateway/igw-0a7ffab213d846b4c",
            "id": "igw-0a7ffab213d846b4c",
            "owner_id": "727940474452",
            "tags": {
              "Environment": "prod",
              "Name": "main IGW"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "main IGW"
            },
            "vpc_id": "vpc-0722c83f3bff3b4a0"
          },
          "dependencies": [
            "module.main_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.igw-route-table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:727940474452:route-table/rtb-0302495c7939bc9dd",
            "id": "rtb-0302495c7939bc9dd",
            "owner_id": "727940474452",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a7ffab213d846b4c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0722c83f3bff3b4a0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.igw.aws_internet_gateway.igw",
            "module.main_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:727940474452:loadbalancer/app/web-lb/ba15167f23764cc1",
            "arn_suffix": "app/web-lb/ba15167f23764cc1",
            "dns_name": "web-lb-426277419.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:727940474452:loadbalancer/app/web-lb/ba15167f23764cc1",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "web-lb",
            "security_groups": [
              "sg-09d3d3599d3477d8a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-006cc59f425eb4994"
              },
              {
                "subnet_id": "subnet-05c3f0c7158d4da02"
              }
            ],
            "subnets": [
              "subnet-006cc59f425eb4994",
              "subnet-05c3f0c7158d4da02"
            ],
            "tags": {
              "Environment": "production",
              "Name": "nginx-lb",
              "type": "Application"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "nginx-lb",
              "type": "Application"
            },
            "vpc_id": "vpc-0722c83f3bff3b4a0",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.main_vpc.aws_vpc.main",
            "module.nginx-sg.aws_security_group.security_group",
            "module.public_subnet_1.aws_subnet.subnet",
            "module.public_subnet_2.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.lb-tg-attachment-nginx-1",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "lb-tg-attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:727940474452:targetgroup/nginx-tg/43f1d950163d3951-20211022124753752500000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:727940474452:targetgroup/nginx-tg/43f1d950163d3951",
            "target_id": "i-0871468bbeb22f518"
          },
          "dependencies": [
            "data.aws_ami.aws-linux",
            "module.main_vpc.aws_vpc.main",
            "module.nginx-instance-1.aws_instance.ec2_instance",
            "module.nginx-sg.aws_security_group.security_group",
            "module.nginx-tg.aws_lb_target_group.tg",
            "module.public_subnet_1.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.lb-tg-attachment-nginx-2",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "lb-tg-attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:727940474452:targetgroup/nginx-tg/43f1d950163d3951-20211022124753876100000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:727940474452:targetgroup/nginx-tg/43f1d950163d3951",
            "target_id": "i-066e17f7ca3671e74"
          },
          "dependencies": [
            "data.aws_ami.aws-linux",
            "module.main_vpc.aws_vpc.main",
            "module.nginx-instance-2.aws_instance.ec2_instance",
            "module.nginx-sg.aws_security_group.security_group",
            "module.nginx-tg.aws_lb_target_group.tg",
            "module.public_subnet_2.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.listener-lb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:727940474452:listener/app/web-lb/ba15167f23764cc1/36780a8e1ec598c0",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:727940474452:targetgroup/nginx-tg/43f1d950163d3951",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:727940474452:listener/app/web-lb/ba15167f23764cc1/36780a8e1ec598c0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:727940474452:loadbalancer/app/web-lb/ba15167f23764cc1",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.lb.aws_lb.lb",
            "module.main_vpc.aws_vpc.main",
            "module.nginx-sg.aws_security_group.security_group",
            "module.nginx-tg.aws_lb_target_group.tg",
            "module.public_subnet_1.aws_subnet.subnet",
            "module.public_subnet_2.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.main_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:727940474452:vpc/vpc-0722c83f3bff3b4a0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00bf32deaa8b38be7",
            "default_route_table_id": "rtb-04fc51ed14691d0e6",
            "default_security_group_id": "sg-00b8a4f46363d95d6",
            "dhcp_options_id": "dopt-01e658896d65fbaac",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0722c83f3bff3b4a0",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-04fc51ed14691d0e6",
            "owner_id": "727940474452",
            "tags": {
              "Environment": "prod",
              "Name": "prod-vpc",
              "Purpuse": "vpc for web app"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-vpc",
              "Purpuse": "vpc for web app"
            }
          }
        }
      ]
    },
    {
      "module": "module.nat-route-table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:727940474452:route-table/rtb-079b486bb55d72fdd",
            "id": "rtb-079b486bb55d72fdd",
            "owner_id": "727940474452",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0359f46e1f7b15bd0",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0722c83f3bff3b4a0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eip.aws_eip.eip",
            "module.igw.aws_internet_gateway.igw",
            "module.main_vpc.aws_vpc.main",
            "module.nat_gateway.aws_nat_gateway.ngw"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05ba7a0924f7c6975",
            "connectivity_type": "public",
            "id": "nat-0359f46e1f7b15bd0",
            "network_interface_id": "eni-091d2b6447796c228",
            "private_ip": "10.0.0.70",
            "public_ip": "23.21.232.182",
            "subnet_id": "subnet-05c3f0c7158d4da02",
            "tags": {
              "Environment": "prod",
              "Name": "gw NAT"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "gw NAT"
            }
          },
          "dependencies": [
            "module.eip.aws_eip.eip",
            "module.igw.aws_internet_gateway.igw",
            "module.main_vpc.aws_vpc.main",
            "module.public_subnet_1.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.nginx-instance-1[0]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03c53cb2507dda8ae",
            "arn": "arn:aws:ec2:us-east-1:727940474452:instance/i-0871468bbeb22f518",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0871468bbeb22f518",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "galsekey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06715b2c46189e277",
            "private_dns": "ip-10-0-0-16.ec2.internal",
            "private_ip": "10.0.0.16",
            "public_ip": "3.237.94.94",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e06da73ab4f90866",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05c3f0c7158d4da02",
            "tags": {
              "Name": "nginx-1",
              "Owner": "Gal Segal",
              "Purpose": "nginx server",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "nginx-1",
              "Owner": "Gal Segal",
              "Purpose": "nginx server",
              "Terraform": "true"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09d3d3599d3477d8a"
            ]
          },
          "dependencies": [
            "module.nginx-sg.aws_security_group.security_group",
            "module.public_subnet_1.aws_subnet.subnet",
            "data.aws_ami.aws-linux",
            "module.main_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.nginx-instance-2[0]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03c53cb2507dda8ae",
            "arn": "arn:aws:ec2:us-east-1:727940474452:instance/i-066e17f7ca3671e74",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-066e17f7ca3671e74",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "galsekey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0358abb5b331821d7",
            "private_dns": "ip-10-0-1-109.ec2.internal",
            "private_ip": "10.0.1.109",
            "public_ip": "3.93.153.152",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01be6bf4362c3e719",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-006cc59f425eb4994",
            "tags": {
              "Name": "nginx-2",
              "Owner": "Gal Segal",
              "Purpose": "nginx server",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "nginx-2",
              "Owner": "Gal Segal",
              "Purpose": "nginx server",
              "Terraform": "true"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09d3d3599d3477d8a"
            ]
          },
          "dependencies": [
            "data.aws_ami.aws-linux",
            "module.main_vpc.aws_vpc.main",
            "module.nginx-sg.aws_security_group.security_group",
            "module.public_subnet_2.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.nginx-sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:727940474452:security-group/sg-09d3d3599d3477d8a",
            "description": "allow ssh,http",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09d3d3599d3477d8a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx-server-sg",
            "name_prefix": "",
            "owner_id": "727940474452",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_http-ssh",
              "Owner": "Gal",
              "Purpuse": "SG for NGINX"
            },
            "tags_all": {
              "Name": "allow_http-ssh",
              "Owner": "Gal",
              "Purpuse": "SG for NGINX"
            },
            "timeouts": null,
            "vpc_id": "vpc-0722c83f3bff3b4a0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.nginx-tg",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:727940474452:targetgroup/nginx-tg/43f1d950163d3951",
            "arn_suffix": "targetgroup/nginx-tg/43f1d950163d3951",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/index.html",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:727940474452:targetgroup/nginx-tg/43f1d950163d3951",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "nginx-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0722c83f3bff3b4a0"
          },
          "dependencies": [
            "module.main_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnet_1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:727940474452:subnet/subnet-0caf5e3781013ec2b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "id": "subnet-0caf5e3781013ec2b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "727940474452",
            "tags": {
              "Environment": "prod",
              "Name": "private-subnet-2",
              "Purpuse": "private subnet for web app"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "private-subnet-2",
              "Purpuse": "private subnet for web app"
            },
            "vpc_id": "vpc-0722c83f3bff3b4a0"
          },
          "dependencies": [
            "module.main_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnet_2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:727940474452:subnet/subnet-05a03f49db4ca2222",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "id": "subnet-05a03f49db4ca2222",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "727940474452",
            "tags": {
              "Environment": "prod",
              "Name": "private-subnet-2",
              "Purpuse": "private subnet for web app"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "private-subnet-2",
              "Purpuse": "private subnet for web app"
            },
            "vpc_id": "vpc-0722c83f3bff3b4a0"
          },
          "dependencies": [
            "module.main_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnet_1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:727940474452:subnet/subnet-05c3f0c7158d4da02",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-05c3f0c7158d4da02",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "727940474452",
            "tags": {
              "Environment": "prod",
              "Name": "public-subnet-1",
              "Purpuse": "public subnet for web app"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "public-subnet-1",
              "Purpuse": "public subnet for web app"
            },
            "vpc_id": "vpc-0722c83f3bff3b4a0"
          },
          "dependencies": [
            "module.main_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnet_2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:727940474452:subnet/subnet-006cc59f425eb4994",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-006cc59f425eb4994",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "727940474452",
            "tags": {
              "Environment": "prod",
              "Name": "public-subnet-2",
              "Purpuse": "public subnet for web app"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "public-subnet-2",
              "Purpuse": "public subnet for web app"
            },
            "vpc_id": "vpc-0722c83f3bff3b4a0"
          },
          "dependencies": [
            "module.main_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rt-assoc-prv-1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b938b33c527a7ac6",
            "route_table_id": "rtb-079b486bb55d72fdd",
            "subnet_id": "subnet-0caf5e3781013ec2b"
          },
          "dependencies": [
            "module.nat-route-table.aws_route_table.route_table",
            "module.nat_gateway.aws_nat_gateway.ngw",
            "module.private_subnet_1.aws_subnet.subnet",
            "module.public_subnet_1.aws_subnet.subnet",
            "module.eip.aws_eip.eip",
            "module.igw.aws_internet_gateway.igw",
            "module.main_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rt-assoc-prv-2",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00bc6084e2b36f436",
            "route_table_id": "rtb-079b486bb55d72fdd",
            "subnet_id": "subnet-05a03f49db4ca2222"
          },
          "dependencies": [
            "module.main_vpc.aws_vpc.main",
            "module.nat-route-table.aws_route_table.route_table",
            "module.nat_gateway.aws_nat_gateway.ngw",
            "module.private_subnet_2.aws_subnet.subnet",
            "module.public_subnet_1.aws_subnet.subnet",
            "module.eip.aws_eip.eip",
            "module.igw.aws_internet_gateway.igw"
          ]
        }
      ]
    },
    {
      "module": "module.rt-assoc-pub-1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-086a617b55283f34e",
            "route_table_id": "rtb-0302495c7939bc9dd",
            "subnet_id": "subnet-05c3f0c7158d4da02"
          },
          "dependencies": [
            "module.main_vpc.aws_vpc.main",
            "module.public_subnet_1.aws_subnet.subnet",
            "module.igw-route-table.aws_route_table.route_table",
            "module.igw.aws_internet_gateway.igw"
          ]
        }
      ]
    },
    {
      "module": "module.rt-assoc-pub-2",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ba8c494713af17fb",
            "route_table_id": "rtb-0302495c7939bc9dd",
            "subnet_id": "subnet-006cc59f425eb4994"
          },
          "dependencies": [
            "module.igw-route-table.aws_route_table.route_table",
            "module.igw.aws_internet_gateway.igw",
            "module.main_vpc.aws_vpc.main",
            "module.public_subnet_2.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.sg-rule-in-1",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-1474088268",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09d3d3599d3477d8a",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main_vpc.aws_vpc.main",
            "module.nginx-sg.aws_security_group.security_group"
          ]
        }
      ]
    },
    {
      "module": "module.sg-rule-in-2",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-3780546809",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09d3d3599d3477d8a",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main_vpc.aws_vpc.main",
            "module.nginx-sg.aws_security_group.security_group"
          ]
        }
      ]
    },
    {
      "module": "module.sg-rule-out",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1084753453",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-09d3d3599d3477d8a",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main_vpc.aws_vpc.main",
            "module.nginx-sg.aws_security_group.security_group"
          ]
        }
      ]
    }
  ]
}